<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_main"
        android:icon="@drawable/ic_search_white_24dp"
        android:onClick="menuItemMain"
        android:title="@string/menu_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_database"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:onClick="menuItemDatabase"
        android:title="@string/menu_database"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:onClick="menuItemSettings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:onClick="menuItemAbout"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />

</menu>
